# bzlrepo

./: BUILD.bazel  MODULE.bazel  foo.go  go.mod
proto/v1/: BUILD.bazel  foo.proto
proto/v1/foo/: empty.go
