load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:proto package
# gazelle:proto_group go_package
gazelle(name = "gazelle")

go_library(
    name = "bzlrepo",
    srcs = ["foo.go"],
    importpath = "github.com/hazaelsan/bzlrepo",
    visibility = ["//visibility:public"],
)
