load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_googleapis//google/api:field_behavior_proto"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "github.com/hazaelsan/bzlrepo/proto/v1/foo",
    proto = ":foo_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_google_googleapis//google/api:annotations_go_proto"],
)
